--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "slick-carousel": "^1.6.0",
     "vue": "^2.1.0",
     "vue-router": "^2.1.1"
   },
@@ -48,7 +49,6 @@
     "http-proxy-middleware": "^0.17.2",
     "inject-loader": "^2.0.1",
     "isparta-loader": "^2.0.0",
-    "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
     "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
