--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "mathjs": "^3.13.1",
     "slick-carousel": "^1.6.0",
     "vue": "^2.1.0",
     "vue-router": "^2.1.1"
